# proto-lens

./: .travis.yml  README.md  stack-8.0.yaml  stack-8.8.yaml  stack-bootstrap.yaml  stack.yaml  travis-cabal.sh
docs/: lens-laws.md  tutorial.md
lens-labels/: lens-labels.cabal
proto-lens/: package.yaml  proto-lens.cabal
proto-lens-arbitrary/: proto-lens-arbitrary.cabal
proto-lens-arbitrary/src/Data/ProtoLens/: Arbitrary.hs
proto-lens-benchmarks/: Setup.hs  proto-lens-benchmarks.cabal
proto-lens-benchmarks/benchmarks/: compare-protobuf.hs  compare-protobuf.proto
proto-lens-combinators/: Changelog.md  package.yaml  proto-lens-combinators.cabal
proto-lens-descriptors/: proto-lens-descriptors.cabal
proto-lens-descriptors/src/Proto/Google/Protobuf/: Descriptor.hs
proto-lens-descriptors/src/Proto/Google/Protobuf/Compiler/: Plugin.hs
proto-lens-optparse/: proto-lens-optparse.cabal
proto-lens-protobuf-types/: Setup.hs  package.yaml  proto-lens-protobuf-types.cabal
proto-lens-protobuf-types/src/Data/ProtoLens/: Any.hs  Descriptor.hs
proto-lens-protoc/: Changelog.md  package.yaml  proto-lens-protoc.cabal
proto-lens-protoc/src/Data/ProtoLens/Compiler/: Combinators.hs  Generate.hs
proto-lens-setup/: .proto-lens-cabal.cabal.swp  package.yaml  proto-lens-setup.cabal
proto-lens-tests/: Setup.hs  package.yaml  proto-lens-tests.cabal
proto-lens-tests-dep/: Setup.hs  proto-lens-tests-dep.cabal
proto-lens-tests/tests/: lens-laws.hs  lens-laws.proto  oneof.proto  oneof_test.hs  proto3.proto  proto3_test.hs
proto-lens-tutorial/person/proto/: package.yaml
proto-lens/protoc/: Generate.hs
proto-lens/src/Data/ProtoLens/: Encoding.hs  Labels.hs  Message.hs  TextFormat.hs
proto-lens/src/Proto/Google/Protobuf/: Descriptor.hs
proto-lens/src/Proto/Google/Protobuf/Compiler/: Plugin.hs
