name:                proto-lens-setup
version:             0.1.0.1
synopsis:            Cabal interface for running the proto-lens compiler.
description:
  Use a Cabal package's Setup.hs script to turn protocol buffer files (.proto)
  into Haskell files (.hs) for the proto-lens package.
  .
  For more details: <https://github.com/google/proto-lens/blob/master/README.md>
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judahjacobson@google.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.21

library
  exposed-modules:   Data.ProtoLens.Setup
  default-language:  Haskell2010
  hs-source-dirs:    src
  build-depends:
        Cabal >= 1.22 && < 1.25
      , base >= 4.8 && < 4.10
      , directory == 1.2.*
      , filepath == 1.4.*
      , process >= 1.2 && < 1.5
      -- Depending on proto-lens makes proto-lens-protoc available.
      , proto-lens == 0.1.*
