name:                proto-lens
version:             0.1.0.1
synopsis:            A lens-based implementation of protocol buffers in Haskell.
description:
  The proto-lens library provides to protocol buffers using modern
  Haskell language and library patterns.  Specifically, it provides:
  .
  * Composable field accessors via lenses
  .
  * Simple field name resolution/overloading via type-level literals
  .
  * Type-safe reflection and encoding/decoding of messages via GADTs

homepage:            https://github.com/google/proto-lens
license:             BSD3
license-file:        LICENSE
author:              Judah Jacobson
maintainer:          judahjacobson+protolens@google.com
copyright:           Google Inc.
category:            Data
build-type:          Simple
cabal-version:       >=1.21

library
  hs-source-dirs: src
  exposed-modules:     Data.ProtoLens
                       Data.ProtoLens.Encoding
                       Data.ProtoLens.Field
                       Data.ProtoLens.Message
                       Data.ProtoLens.Message.Enum
                       Data.ProtoLens.TextFormat
  other-modules:       Data.ProtoLens.Encoding.Bytes
                       Data.ProtoLens.Encoding.Wire
                       Data.ProtoLens.TextFormat.Parser
  build-depends:  attoparsec == 0.13.*
                , base >= 4.8 && < 4.10
                , bytestring == 0.10.*
                , containers == 0.5.*
                , data-default-class == 0.0.*
                , lens-family == 1.2.*
                , parsec == 3.1.*
                , pretty == 1.1.*
                , text == 1.2.*
                , transformers >= 0.4 && < 0.6
                , void == 0.7.*
  default-language:  Haskell2010
  reexported-modules:
    -- Modules that are needed by the generated Haskell files:
      Data.ByteString as Data.ProtoLens.Reexport.Data.ByteString
    , Data.Default.Class as Data.ProtoLens.Reexport.Data.Default.Class
    , Data.Map as Data.ProtoLens.Reexport.Data.Map
    , Data.Text as Data.ProtoLens.Reexport.Data.Text
    , Lens.Family2 as Data.ProtoLens.Reexport.Lens.Family2
    , Lens.Family2.Unchecked as Data.ProtoLens.Reexport.Lens.Family2.Unchecked
    

executable proto-lens-protoc
  main-is:  protoc-gen-haskell.hs
  other-modules:
      Bootstrap.Proto.Google.Protobuf.Compiler.Plugin
      Bootstrap.Proto.Google.Protobuf.Descriptor
      Combinators
      Definitions
      Generate

  build-depends:
        base >= 4.8 && < 4.10
      , bytestring == 0.10.*
      , containers == 0.5.*
      , data-default-class == 0.0.*
      , filepath == 1.4.*
      , haskell-src-exts == 1.17.*
      , lens-family == 1.2.*
      -- Specify an exact version of `proto-lens`, since it's tied closely
      -- to the generated code.
      , proto-lens == 0.1.0.1
      , text == 1.2.*
  hs-source-dirs:      protoc
  default-language:    Haskell2010

